# lekima

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
src/event/: io.rs  mod.rs
src/player/: mod.rs
src/ui/: mod.rs
