[package]
name = "lekima"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncmapi = "0.1.8"
rodio = { git = "https://github.com/RustAudio/rodio" }
tokio = { version = "1.11.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11.4", features = ["stream"] }
bytes = "1.1.0"
termion = "1.5"
tui = "0.16"
